[gd_scene load_steps=4 format=3 uid="uid://dy2v4fddymnyo"]

[ext_resource type="Script" path="res://Scenes/animated_coin.gd" id="1_80x3b"]
[ext_resource type="Texture2D" uid="uid://74vt11axc23c" path="res://Graphics/colored-transparent_packed.png" id="1_h852y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6of4"]
radius = 4.0

[node name="AnimatedCoin" type="Area2D"]
scale = Vector2(0.7, 0.7)
collision_layer = 16
collision_mask = 3
script = ExtResource("1_80x3b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_x6of4")

[node name="AnimatedCoin" type="Sprite2D" parent="."]
texture = ExtResource("1_h852y")
region_enabled = true
region_rect = Rect2(352, 64, 16, 16)

[node name="AnimationTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
